testsuite/tests/typing-unboxed-types/unboxed_gadts_disabled.compilers.reference
File "unboxed_gadts.ml", line 48, characters 11-24:
48 | type ('a : value & value) t =
                ^^^^^^^^^^^^^
Error: The appropriate layouts extension is not enabled.
       You must enable -extension layouts to use this feature.
